--- a/DocumedsBackend/DocumedsBackend/Properties/launchSettings.json
+++ b/DocumedsBackend/DocumedsBackend/Properties/launchSettings.json
@@ -16,7 +16,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:7009;http://localhost:5009",
+      "applicationUrl": "https://localhost:44303",
       "dotnetRunMessages": true
     },
     "IIS Express": {
