доработка работы с пациентами

--- a/DocumedsBackend/DocumedsBackend/DocumedsBackend.csproj
+++ b/DocumedsBackend/DocumedsBackend/DocumedsBackend.csproj
@@ -6,6 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>68521e43-0d41-478f-b215-00085ce0f885</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+	<GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
+	<GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
